--- a/timer.html
+++ b/timer.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="../css/timer.css" />
-	<script type="text/javascript" src="../js/timer.js" defer="defer"></script>
+	<link rel="stylesheet" href="timer.css" />
+	<script type="text/javascript" src="timer.js" defer="defer"></script>
 	<title>My Timer</title>
 </head>
 <body>
